--- a/.github/workflows/retrain_sgd.yml
+++ b/.github/workflows/retrain_sgd.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           cd retraining  # Navigate to the retrain directory
           python -m pip install --upgrade pip
+          pip install spacy==3.5.1
           pip install -r requirements.txt
 
       - name: Run retraining script
