--- a/retraining/requirements.txt
+++ b/retraining/requirements.txt
@@ -1,3 +1,6 @@
+spacy==3.5.1
+numpy==1.21.0  # Choose a version compatible with spacy 3.5.1
+thinc==8.1.0  # Ensure thinc is compatible with spacy 3.5.1
 pandas
 joblib
 scikit-learn
