--- a/retraining/requirements.txt
+++ b/retraining/requirements.txt
@@ -1,6 +1,6 @@
 spacy==3.5.1
-numpy==1.21.0  # Choose a version compatible with spacy 3.5.1
-thinc==8.1.0  # Ensure thinc is compatible with spacy 3.5.1
+thinc>=8.1.8,<8.2.0  # Adjusted to meet spacy's requirement
+numpy>=1.20.0,<1.22.0
 pandas
 joblib
 scikit-learn
