--- a/.github/workflows/retrain_sgd.yml
+++ b/.github/workflows/retrain_sgd.yml
@@ -3,7 +3,7 @@ name: Retrain Model
 on:
   push:
     paths:
-      - 'retraining/copyright_data/**'  # Trigger action when a file is pushed to the new_data folder
+      - 'retraining/copyright_data/**'  # Trigger action when a file is pushed to the copyright_data folder
 
 jobs:
   retrain:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'  # Adjust based on your needs
+          python-version: '3.9'
 
       - name: Install dependencies
         run: |
